[package]
name = "accessible"
version = "0.1.0"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
license = "MIT / Apache-2.0"

[dependencies]
libc = "0.2"
log = "0.4"

[target.x86_64-unknown-linux-gnu.dependencies]
dbus = "0.2.1"

[target.x86_64-apple-darwin.dependencies]
cocoa = "0.19"
objc = "0.2"
